# apimachinery

./: BUILD.bazel  WORKSPACE  doc.go  go.mod  go.work  go.work.sum
pkg/: go.mod
pkg/api/: go.mod
pkg/api/apitesting/: BUILD.bazel  codec.go
pkg/api/apitesting/fuzzer/: BUILD.bazel  fuzzer.go
pkg/api/apitesting/naming/: BUILD.bazel  naming.go
pkg/api/apitesting/roundtrip/: BUILD.bazel  compatibility.go  construct.go  roundtrip.go
pkg/api/equality/: BUILD.bazel  semantic.go
pkg/api/errors/: BUILD.bazel  doc.go  errors.go  errors_test.go  go.mod
pkg/api/meta/: BUILD.bazel  conditions.go  conditions_test.go  doc.go  errors.go  errors_test.go  firsthit_restmapper.go  go.mod  help.go  interfaces.go  lazy.go  meta.go  meta_test.go  multirestmapper.go  multirestmapper_test.go  priority.go  priority_test.go  restmapper.go  restmapper_test.go
pkg/api/meta/table/: BUILD.bazel  table.go
pkg/api/meta/testrestmapper/: BUILD.bazel  test_restmapper.go
pkg/api/resource/: BUILD.bazel  generated.pb.go  quantity_example_test.go
pkg/api/validation/: BUILD.bazel  doc.go  generic.go  go.mod  objectmeta.go  objectmeta_test.go
pkg/api/validation/path/: BUILD.bazel
pkg/apis/: go.mod
pkg/apis/meta/: go.mod
pkg/apis/testapigroup/: BUILD.bazel  doc.go  go.mod  register.go  types.go  zz_generated.deepcopy.go
pkg/apis/testapigroup/fuzzer/: BUILD.bazel  fuzzer.go
pkg/apis/testapigroup/install/: BUILD.bazel  install.go  roundtrip_test.go
pkg/apis/testapigroup/v1/: BUILD.bazel  conversion.go  defaults.go  doc.go  generated.pb.go  go.mod  register.go  types.go  zz_generated.conversion.go  zz_generated.deepcopy.go
pkg/conversion/: BUILD.bazel  deep_equal.go  doc.go  go.mod  go.sum
pkg/conversion/queryparams/: BUILD.bazel  convert_test.go  doc.go  go.mod
pkg/fields/: BUILD.bazel  doc.go  go.mod  requirements.go  selector.go
pkg/labels/: BUILD.bazel  doc.go  go.mod  labels.go  selector.go  selector_test.go
pkg/runtime/: BUILD.bazel  codec.go  codec_check.go  codec_test.go  conversion.go  converter.go  converter_test.go  doc.go  embedded.go  embedded_test.go  error.go  extension_test.go  generated.pb.go  go.mod  helper.go  interfaces.go  local_scheme_test.go  mapper.go  mapper_test.go  negotiate.go  register.go  scheme.go  scheme_test.go  types.go
pkg/runtime/schema/: BUILD.bazel  generated.pb.go
pkg/runtime/serializer/: BUILD.bazel  codec_factory.go  codec_test.go  encoder_with_allocator_test.go  go.mod  negotiated_codec.go  sparse_test.go
pkg/runtime/serializer/json/: BUILD.bazel  json.go  json_limit_test.go  json_test.go  meta.go
pkg/runtime/serializer/protobuf/: BUILD.bazel  doc.go  go.mod  protobuf.go  protobuf_test.go
pkg/runtime/serializer/recognizer/: BUILD.bazel  recognizer.go
pkg/runtime/serializer/recognizer/testing/: BUILD.bazel  recognizer_test.go
pkg/runtime/serializer/streaming/: BUILD.bazel  streaming.go  streaming_test.go
pkg/runtime/serializer/versioning/: BUILD.bazel  versioning.go  versioning_test.go  versioning_unstructured_test.go
pkg/runtime/serializer/yaml/: BUILD.bazel  meta.go  meta_test.go  yaml.go  yaml_test.go
pkg/runtime/testing/: BUILD.bazel  cacheable_object.go  conversion.go  doc.go  go.mod  types.go  zz_generated.deepcopy.go
pkg/selection/: BUILD.bazel  go.mod
pkg/test/: BUILD.bazel  api_meta_help_test.go  api_meta_meta_test.go  apis_meta_v1_unstructed_unstructure_test.go  runtime_helper_test.go  runtime_serializer_protobuf_protobuf_test.go  runtime_unversioned_test.go  util.go  zz_generated.deepcopy.go
pkg/types/: BUILD.bazel  doc.go  go.mod
pkg/util/: go.mod
pkg/util/cache/: BUILD.bazel  expiring.go  expiring_test.go  lruexpirecache_test.go
pkg/util/diff/: BUILD.bazel
pkg/util/duration/: BUILD.bazel
pkg/util/errors/: BUILD.bazel  doc.go  errors.go  go.mod  go.sum
pkg/util/framer/: BUILD.bazel
pkg/util/httpstream/: BUILD.bazel  doc.go  go.mod
pkg/util/httpstream/spdy/: BUILD.bazel  connection.go  connection_test.go  roundtripper.go  roundtripper_test.go  upgrade.go
pkg/util/intstr/: BUILD.bazel  generated.pb.go  intstr.go  intstr_test.go
pkg/util/json/: BUILD.bazel  json.go
pkg/util/jsonmergepatch/: BUILD.bazel  patch.go  patch_test.go
pkg/util/managedfields/: BUILD.bazel  extract.go  extract_test.go  fieldmanager.go  fieldmanager_test.go  gvkparser.go  scalehandler.go  scalehandler_test.go  typeconverter.go
pkg/util/managedfields/internal/: BUILD.bazel  atmostevery_test.go  buildmanagerinfo.go  capmanagers.go  capmanagers_test.go  conflict.go  conflict_test.go  fieldmanager.go  fieldmanager_test.go  fields.go  fields_test.go  lastapplied.go  lastappliedmanager.go  lastappliedmanager_test.go  lastappliedupdater.go  lastappliedupdater_test.go  managedfields.go  managedfields_test.go  managedfieldsupdater.go  managedfieldsupdater_test.go  manager.go  pathelement.go  skipnonapplied.go  skipnonapplied_test.go  stripmeta.go  structuredmerge.go  typeconverter.go  typeconverter_test.go  versionconverter.go  versionconverter_test.go
pkg/util/managedfields/internal/testing/: BUILD.bazel  testfieldmanager.go
pkg/util/managedfields/managedfieldstest/: BUILD.bazel  testfieldmanager.go
pkg/util/mergepatch/: BUILD.bazel  util.go
pkg/util/naming/: BUILD.bazel  from_stack_test.go
pkg/util/net/: BUILD.bazel  http.go  http_test.go  interface.go  interface_test.go  port_split.go  util_test.go
pkg/util/proxy/: BUILD.bazel  dial.go  dial_test.go  doc.go  go.mod  transport.go  upgradeaware.go  upgradeaware_test.go
pkg/util/rand/: BUILD.bazel
pkg/util/remotecommand/: BUILD.bazel  constants.go
pkg/util/runtime/: BUILD.bazel  runtime.go  runtime_test.go
pkg/util/sets/: BUILD.bazel  set_generic_test.go
pkg/util/strategicpatch/: BUILD.bazel  meta.go  patch.go  patch_test.go  types.go
pkg/util/uuid/: BUILD.bazel  uuid.go
pkg/util/validation/: BUILD.bazel  validation.go  validation_test.go
pkg/version/: BUILD.bazel  doc.go  go.mod
pkg/watch/: BUILD.bazel  doc.go  filter_test.go  go.mod  mux.go  mux_test.go  streamwatcher.go  streamwatcher_test.go  watch.go  watch_test.go
(+97 files in other folders)
