load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "conversion",
    srcs = [
        "converter.go",
        "deep_equal.go",
        "doc.go",
        "helper.go",
    ],
    importpath = "github.com/jeffpignataro/apimachinery/pkg/conversion",
    visibility = ["//visibility:public"],
    deps = ["@io_k8s_apimachinery//third_party/forked/golang/reflect:go_default_library"],
)

go_test(
    name = "conversion_test",
    srcs = [
        "converter_test.go",
        "helper_test.go",
    ],
    embed = [":conversion"],
)
