load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "types",
    srcs = [
        "doc.go",
        "namespacedname.go",
        "nodename.go",
        "patch.go",
        "uid.go",
    ],
    importpath = "github.com/jeffpignataro/apimachinery/pkg/types",
    visibility = ["//visibility:public"],
)
