load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "version",
    srcs = [
        "doc.go",
        "helpers.go",
        "types.go",
    ],
    importpath = "github.com/jeffpignataro/apimachinery/pkg/version",
    visibility = ["//visibility:public"],
)

go_test(
    name = "version_test",
    srcs = ["helpers_test.go"],
    embed = [":version"],
)
