load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "apitesting",
    srcs = ["codec.go"],
    importpath = "github.com/jeffpignataro/apimachinery/pkg/api/apitesting",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/runtime:runtime_go_proto",
        "//pkg/runtime/schema:schema_go_proto",
        "@io_k8s_apimachinery//pkg/runtime/serializer:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/serializer/recognizer:go_default_library",
    ],
)
