load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "resource_proto",
    srcs = ["generated.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "resource_go_proto",
    importpath = "k8s.io/apimachinery/pkg/api/resource",
    proto = ":resource_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "resource",
    srcs = [
        "amount.go",
        "math.go",
        "quantity.go",
        "quantity_proto.go",
        "scale_int.go",
        "suffix.go",
        "zz_generated.deepcopy.go",
    ],
    importpath = "github.com/jeffpignataro/apimachinery/pkg/api/resource",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gogo_protobuf//proto",
        "@in_gopkg_inf_v0//:inf_v0",
    ],
)

go_test(
    name = "resource_test",
    srcs = [
        "amount_test.go",
        "math_test.go",
        "quantity_example_test.go",
        "quantity_proto_test.go",
        "quantity_test.go",
        "scale_int_test.go",
    ],
    embed = [":resource"],
    deps = [
        ":resource_go_proto",
        "@com_github_google_gofuzz//:gofuzz",
        "@com_github_spf13_pflag//:pflag",
        "@in_gopkg_inf_v0//:inf_v0",
    ],
)
