load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testapigroup",
    srcs = [
        "doc.go",
        "register.go",
        "types.go",
        "zz_generated.deepcopy.go",
    ],
    importpath = "github.com/jeffpignataro/apimachinery/pkg/apis/testapigroup",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/meta/v1:v1_go_proto",
        "//pkg/runtime:runtime_go_proto",
        "//pkg/runtime/schema:schema_go_proto",
    ],
)
