load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "queryparams",
    srcs = [
        "convert.go",
        "doc.go",
    ],
    importpath = "github.com/jeffpignataro/apimachinery/pkg/conversion/queryparams",
    visibility = ["//visibility:public"],
)

go_test(
    name = "queryparams_test",
    srcs = ["convert_test.go"],
    deps = [
        "//pkg/apis/meta/v1:v1_go_proto",
        "//pkg/runtime/schema:schema_go_proto",
        "@io_k8s_apimachinery//pkg/conversion/queryparams:go_default_library",
    ],
)
