load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "schema_proto",
    srcs = ["generated.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "schema_go_proto",
    importpath = "k8s.io/apimachinery/pkg/runtime/schema",
    proto = ":schema_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "schema",
    srcs = [
        "group_version.go",
        "interfaces.go",
    ],
    importpath = "github.com/jeffpignataro/apimachinery/pkg/runtime/schema",
    visibility = ["//visibility:public"],
)

go_test(
    name = "schema_test",
    srcs = ["group_version_test.go"],
    embed = [":schema"],
)
