load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testing",
    srcs = [
        "cacheable_object.go",
        "conversion.go",
        "doc.go",
        "types.go",
        "zz_generated.deepcopy.go",
    ],
    importpath = "github.com/jeffpignataro/apimachinery/pkg/runtime/testing",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/runtime:runtime_go_proto",
        "//pkg/runtime/schema:schema_go_proto",
        "@io_k8s_apimachinery//pkg/conversion:go_default_library",
        "@io_k8s_apimachinery//pkg/util/json:go_default_library",
    ],
)
