load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "diff",
    srcs = ["diff.go"],
    importpath = "github.com/jeffpignataro/apimachinery/pkg/util/diff",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_davecgh_go_spew//spew",
        "@com_github_google_go_cmp//cmp",
    ],
)

go_test(
    name = "diff_test",
    srcs = ["diff_test.go"],
    embed = [":diff"],
)
