load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "duration",
    srcs = ["duration.go"],
    importpath = "github.com/jeffpignataro/apimachinery/pkg/util/duration",
    visibility = ["//visibility:public"],
)

go_test(
    name = "duration_test",
    srcs = ["duration_test.go"],
    embed = [":duration"],
)
