load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "errors",
    srcs = [
        "doc.go",
        "errors.go",
    ],
    importpath = "github.com/jeffpignataro/apimachinery/pkg/util/errors",
    visibility = ["//visibility:public"],
    deps = ["@io_k8s_apimachinery//pkg/util/sets:go_default_library"],
)

go_test(
    name = "errors_test",
    srcs = ["errors_test.go"],
    embed = [":errors"],
)
