load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "framer",
    srcs = ["framer.go"],
    importpath = "github.com/jeffpignataro/apimachinery/pkg/util/framer",
    visibility = ["//visibility:public"],
)

go_test(
    name = "framer_test",
    srcs = ["framer_test.go"],
    embed = [":framer"],
)
