load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "intstr_proto",
    srcs = ["generated.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "intstr_go_proto",
    importpath = "k8s.io/apimachinery/pkg/util/intstr",
    proto = ":intstr_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "intstr",
    srcs = [
        "instr_fuzz.go",
        "intstr.go",
    ],
    importpath = "github.com/jeffpignataro/apimachinery/pkg/util/intstr",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_gofuzz//:gofuzz",
        "@io_k8s_klog_v2//:klog",
    ],
)

go_test(
    name = "intstr_test",
    srcs = ["intstr_test.go"],
    embed = [":intstr"],
    deps = ["@io_k8s_sigs_yaml//:yaml"],
)
