load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jsonmergepatch",
    srcs = ["patch.go"],
    importpath = "github.com/jeffpignataro/apimachinery/pkg/util/jsonmergepatch",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_evanphx_json_patch//:json-patch",
        "@io_k8s_apimachinery//pkg/util/json:go_default_library",
        "@io_k8s_apimachinery//pkg/util/mergepatch:go_default_library",
    ],
)

go_test(
    name = "jsonmergepatch_test",
    srcs = ["patch_test.go"],
    embed = [":jsonmergepatch"],
    deps = [
        "@com_github_davecgh_go_spew//spew",
        "@com_github_evanphx_json_patch//:json-patch",
        "@io_k8s_apimachinery//pkg/util/json:go_default_library",
        "@io_k8s_sigs_yaml//:yaml",
    ],
)
